#
# This file is part of eyeo Chromium SDK,
# Copyright (C) 2006-present eyeo GmbH
#
# eyeo Chromium SDK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
#
# eyeo Chromium SDK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with eyeo Chromium SDK.  If not, see <http://www.gnu.org/licenses/>.

source_set("serializer") {
  sources = [
    "filter_keyword_extractor.cc",
    "filter_keyword_extractor.h",
    "flatbuffer_serializer.cc",
    "flatbuffer_serializer.h",
    "serializer.h",
  ]

  public_deps = [
    "//base",
    "//components/adblock/core:schema",
    "//components/adblock/core/common",
    "//third_party/re2",
    "//url",
  ]

  deps = [ "//components/adblock/core/converter/parser" ]
}

source_set("unit_tests") {
  testonly = true
  sources = [ "test/filter_keyword_extractor_test.cc" ]

  deps = [
    ":serializer",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
